--- a/assets/pug/data/notification.pug
+++ b/assets/pug/data/notification.pug
@@ -8,7 +8,7 @@
             name:"Dmitriy Groshev",
             avatar:"2.jpg",
             subTitle:"Hi, i am josephin. How are you... ",
-            status:"success",
+            status:"online",
             time:"17:12",
             notif:3, 
          },
@@ -16,7 +16,7 @@
             name:"Sufiya Elija",
             avatar:"3.jpg",
             subTitle:"I need job, Please help me.",
-            status:"danger",
+            status:"offline",
             time:"Fri",
             notif:32, 
          },
@@ -24,7 +24,7 @@
             name:"Janis Evans",
             avatar:"5.jpg",
             subTitle:"Good Morning!",
-            status:"success",
+            status:"online",
             time:"8:22",
             notif:12, 
          },
@@ -33,7 +33,7 @@
             name:"Mukrani Pabelo",
             avatar:"4.jpg",
             subTitle:"Hi, i am josephin. How are you...",
-            status:"success",
+            status:"online",
             time:"03:14",
             notif:10, 
          },
@@ -41,7 +41,7 @@
             name:"Josephin Water",
             avatar:"2.jpg",
             subTitle:"You’ve got some kind of a stom...",
-            status:"danger",
+            status:"offline",
             time:"Thu",
             notif:2, 
          },
@@ -49,7 +49,7 @@
             name:"Janis Evans",
             avatar:"5.jpg",
             subTitle:"Good Morning!",
-            status:"success",
+            status:"online",
             time:"8:22",
             notif:12, 
          },
@@ -57,7 +57,7 @@
             name:"Sufiya Elija",
             avatar:"3.jpg",
             subTitle:"I need job, Please help me.",
-            status:"danger",
+            status:"offline",
             time:"Fri",
             notif:32, 
          },
