--- a/assets/pug/layout/unique.pug
+++ b/assets/pug/layout/unique.pug
@@ -3,7 +3,8 @@
 aside(class="sidebar")  
   div.logo-wrapper
     a(href="index.html") 
-      img(class="w-full" src="../../assets/images/logo/logo.png" alt="logo")
+      img(class="w-full full-sidebar" src="../../assets/images/logo/logo.png" alt="logo")
+      img(class="w-full icon-sidebar" src="../../assets/images/logo/logo-sort-1.png" alt="logo")
     button.sidebar-btn
       +SVG_ICON("Category", "w-6 h-6") 
   div.search-wrapper
