--- a/assets/pug/pages/template/chat-app.pug
+++ b/assets/pug/pages/template/chat-app.pug
@@ -64,9 +64,9 @@ html(lang='en')
     include ../../components/customizer
     //- Voice call modal
     div.modal-main.accept-call-start
-      input#voice-call-modal(class="peer" name="voice-call-modal" type='checkbox')
-      label.modal-overlay(class="peer-checked:block" for='voice-call-modal')
-      div.modal.modal-center(class="max-w-[450px] 2md:!w-full peer-checked:opacity-100 peer-checked:visible rounded-xl")
+      input#voice-call-modal(class="" name="voice-call-modal" type='checkbox')
+      label.modal-overlay(class="" for='voice-call-modal')
+      div.modal.modal-center(class="max-w-[450px] 2md:!w-full rounded-xl")
         div.modal-body(class="!p-0 min-h-[500px] 2sm:min-h-[400px]")
           div.voicecall.relative
             img(src="../../assets/images/chat-app/12.jpg" alt="girl" class="h-[500px] w-[450px] 2sm:h-[400px] opacity-70")
@@ -81,10 +81,10 @@ html(lang='en')
                   label(for="voice-call-modal")
                     +SVG_ICON("Call","w-[4rem] h-[4rem] 2lg:w-[3.5rem] 2lg:h-[3.5rem] sm:w-[3rem] sm:h-[3rem] p-[12px] stroke-white bg-danger rounded-full rotate-[132deg]")
     //- Accept call modal
-    div.modal-main.accept-call-end
-      input#accept-call-modal(class="peer" name="accept-call-modal" type='checkbox')
-      label.modal-overlay(class="peer-checked:block" for='accept-call-modal')
-      div.modal.modal-center(class="max-w-[450px] 2md:!w-full peer-checked:opacity-100 peer-checked:visible rounded-xl")
+    div.modal-main.accept-call-end.hide-hide
+      input#accept-call-modal(class="" name="accept-call-modal" type='checkbox')
+      label.modal-overlay(class="" for='accept-call-modal')
+      div.modal.modal-center(class="max-w-[450px] 2md:!w-full rounded-xl")
         div.modal-body(class="!p-0 min-h-[500px] 2sm:min-h-[400px]")
           div.voicecall.relative
             img(src="../../assets/images/chat-app/12.jpg" alt="girl" class="h-[500px] w-[450px] 2sm:h-[400px] opacity-70")
@@ -99,7 +99,6 @@ html(lang='en')
                       +SVG_ICON("Voice","w-9 h-9 p-2 stroke-title bg-white rounded-full dark:bg-sidebar-dark2" )
                     span.text-3xl.swap-off
                       +SVG_ICON("Voice-2","w-9 h-9 p-2 stroke-title bg-white rounded-full dark:bg-sidebar-dark2" )
-
                 li.leading-none 
                   label.swap
                     input(type='checkbox')
