--- a/html/template/index.html
+++ b/html/template/index.html
@@ -77,8 +77,10 @@
                           </div>
                           <ul class="mt-4 flex flex-col max-h-[232px] overflow-auto custom-scroll"> 
                             <li class="flex items-center gap-3 px-2 py-3 transition-all duration-300 border-b last:border-b-0 border-border-light hover:bg-gray-light rounded-5"><a class="flex items-center gap-[12px]" href="./chat.html">
-                                <div class="rounded-full relative "><img class="rounded-full w-9 min-w-[2.25rem] min-h-[2.25rem] h-auto object-cover" src="../../assets/images/avatar/2.jpg" alt="Dmitriy Groshev">
-                                  <div class="indicator absolute border-[2px] border-white top-[-2px] right-[-2px] w-3 h-3 rounded-full bg-success"></div>
+                                <div class="indicator"><span class="chat-status status-online"></span>
+                                  <div class="avatar"> 
+                                    <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/2.jpg" alt="Dmitriy Groshev"></div>
+                                  </div>
                                 </div>
                                 <div>
                                   <h4 class="text-xs font-semibold line-clamp-1 text-title">Dmitriy Groshev</h4>
@@ -88,19 +90,23 @@
                               </div>
                             </li>
                             <li class="flex items-center gap-3 px-2 py-3 transition-all duration-300 border-b last:border-b-0 border-border-light hover:bg-gray-light rounded-5"><a class="flex items-center gap-[12px]" href="./chat.html">
-                                <div class="rounded-full relative "><img class="rounded-full w-9 min-w-[2.25rem] min-h-[2.25rem] h-auto object-cover" src="../../assets/images/avatar/3.jpg" alt="Sufiya Elija">
-                                  <div class="indicator absolute border-[2px] border-white top-[-2px] right-[-2px] w-3 h-3 rounded-full bg-danger"></div>
+                                <div class="indicator"><span class="chat-status status-offline"></span>
+                                  <div class="avatar"> 
+                                    <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/3.jpg" alt="Sufiya Elija"></div>
+                                  </div>
                                 </div>
                                 <div>
                                   <h4 class="text-xs font-semibold line-clamp-1 text-title">Sufiya Elija</h4>
                                   <p class="text-xs font-semibold line-clamp-1 text-content">I need job, Please help me.</p>
                                 </div></a>
-                              <div class="flex flex-col items-end gap-1 ml-auto"><span class="font-normal text-3xs text-content">Fri</span>
+                              <div class="flex flex-col items-end gap-1 ml-auto"><span class="font-normal text-3xs text-content">Fri</span><span class="leading-none p-1 badge bg-primary rounded-full text-3xs flex items-center justify-center min-w-[22px] min-h-[22px]">32</span>
                               </div>
                             </li>
                             <li class="flex items-center gap-3 px-2 py-3 transition-all duration-300 border-b last:border-b-0 border-border-light hover:bg-gray-light rounded-5"><a class="flex items-center gap-[12px]" href="./chat.html">
-                                <div class="rounded-full relative "><img class="rounded-full w-9 min-w-[2.25rem] min-h-[2.25rem] h-auto object-cover" src="../../assets/images/avatar/5.jpg" alt="Janis Evans">
-                                  <div class="indicator absolute border-[2px] border-white top-[-2px] right-[-2px] w-3 h-3 rounded-full bg-success"></div>
+                                <div class="indicator"><span class="chat-status status-online"></span>
+                                  <div class="avatar"> 
+                                    <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/5.jpg" alt="Janis Evans"></div>
+                                  </div>
                                 </div>
                                 <div>
                                   <h4 class="text-xs font-semibold line-clamp-1 text-title">Janis Evans</h4>
@@ -110,8 +116,10 @@
                               </div>
                             </li>
                             <li class="flex items-center gap-3 px-2 py-3 transition-all duration-300 border-b last:border-b-0 border-border-light hover:bg-gray-light rounded-5"><a class="flex items-center gap-[12px]" href="./chat.html">
-                                <div class="rounded-full relative "><img class="rounded-full w-9 min-w-[2.25rem] min-h-[2.25rem] h-auto object-cover" src="../../assets/images/avatar/4.jpg" alt="Mukrani Pabelo">
-                                  <div class="indicator absolute border-[2px] border-white top-[-2px] right-[-2px] w-3 h-3 rounded-full bg-success"></div>
+                                <div class="indicator"><span class="chat-status status-online"></span>
+                                  <div class="avatar"> 
+                                    <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/4.jpg" alt="Mukrani Pabelo"></div>
+                                  </div>
                                 </div>
                                 <div>
                                   <h4 class="text-xs font-semibold line-clamp-1 text-title">Mukrani Pabelo</h4>
@@ -121,19 +129,23 @@
                               </div>
                             </li>
                             <li class="flex items-center gap-3 px-2 py-3 transition-all duration-300 border-b last:border-b-0 border-border-light hover:bg-gray-light rounded-5"><a class="flex items-center gap-[12px]" href="./chat.html">
-                                <div class="rounded-full relative "><img class="rounded-full w-9 min-w-[2.25rem] min-h-[2.25rem] h-auto object-cover" src="../../assets/images/avatar/2.jpg" alt="Josephin Water">
-                                  <div class="indicator absolute border-[2px] border-white top-[-2px] right-[-2px] w-3 h-3 rounded-full bg-danger"></div>
+                                <div class="indicator"><span class="chat-status status-offline"></span>
+                                  <div class="avatar"> 
+                                    <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/2.jpg" alt="Josephin Water"></div>
+                                  </div>
                                 </div>
                                 <div>
                                   <h4 class="text-xs font-semibold line-clamp-1 text-title">Josephin Water</h4>
                                   <p class="text-xs font-semibold line-clamp-1 text-content">You’ve got some kind of a stom...</p>
                                 </div></a>
-                              <div class="flex flex-col items-end gap-1 ml-auto"><span class="font-normal text-3xs text-content">Thu</span>
+                              <div class="flex flex-col items-end gap-1 ml-auto"><span class="font-normal text-3xs text-content">Thu</span><span class="leading-none p-1 badge bg-primary rounded-full text-3xs flex items-center justify-center min-w-[22px] min-h-[22px]">2</span>
                               </div>
                             </li>
                             <li class="flex items-center gap-3 px-2 py-3 transition-all duration-300 border-b last:border-b-0 border-border-light hover:bg-gray-light rounded-5"><a class="flex items-center gap-[12px]" href="./chat.html">
-                                <div class="rounded-full relative "><img class="rounded-full w-9 min-w-[2.25rem] min-h-[2.25rem] h-auto object-cover" src="../../assets/images/avatar/5.jpg" alt="Janis Evans">
-                                  <div class="indicator absolute border-[2px] border-white top-[-2px] right-[-2px] w-3 h-3 rounded-full bg-success"></div>
+                                <div class="indicator"><span class="chat-status status-online"></span>
+                                  <div class="avatar"> 
+                                    <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/5.jpg" alt="Janis Evans"></div>
+                                  </div>
                                 </div>
                                 <div>
                                   <h4 class="text-xs font-semibold line-clamp-1 text-title">Janis Evans</h4>
@@ -143,14 +155,16 @@
                               </div>
                             </li>
                             <li class="flex items-center gap-3 px-2 py-3 transition-all duration-300 border-b last:border-b-0 border-border-light hover:bg-gray-light rounded-5"><a class="flex items-center gap-[12px]" href="./chat.html">
-                                <div class="rounded-full relative "><img class="rounded-full w-9 min-w-[2.25rem] min-h-[2.25rem] h-auto object-cover" src="../../assets/images/avatar/3.jpg" alt="Sufiya Elija">
-                                  <div class="indicator absolute border-[2px] border-white top-[-2px] right-[-2px] w-3 h-3 rounded-full bg-danger"></div>
+                                <div class="indicator"><span class="chat-status status-offline"></span>
+                                  <div class="avatar"> 
+                                    <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/3.jpg" alt="Sufiya Elija"></div>
+                                  </div>
                                 </div>
                                 <div>
                                   <h4 class="text-xs font-semibold line-clamp-1 text-title">Sufiya Elija</h4>
                                   <p class="text-xs font-semibold line-clamp-1 text-content">I need job, Please help me.</p>
                                 </div></a>
-                              <div class="flex flex-col items-end gap-1 ml-auto"><span class="font-normal text-3xs text-content">Fri</span>
+                              <div class="flex flex-col items-end gap-1 ml-auto"><span class="font-normal text-3xs text-content">Fri</span><span class="leading-none p-1 badge bg-primary rounded-full text-3xs flex items-center justify-center min-w-[22px] min-h-[22px]">32</span>
                               </div>
                             </li>
                           </ul>
@@ -741,7 +755,7 @@
         <!-- Sidebar Start -->
         <div class="page-sidebar sidebar-dark unique-sidebar">
           <aside class="sidebar"> 
-            <div class="logo-wrapper"><a href="index.html"> <img class="w-full" src="../../assets/images/logo/logo.png" alt="logo"></a>
+            <div class="logo-wrapper"><a href="index.html"> <img class="w-full full-sidebar" src="../../assets/images/logo/logo.png" alt="logo"><img class="w-full icon-sidebar" src="../../assets/images/logo/logo-sort-1.png" alt="logo"></a>
               <button class="sidebar-btn">
                 <svg class="w-6 h-6"> 
                   <use href="../../assets/svg/sprite.svg#Category"> </use>
@@ -1559,11 +1573,11 @@
                   </div>
                 </div>
                 <div class="card-body">
-                  <ul>
+                  <ul> 
                     <li class="flex gap-3 group items-center justify-between relative first:mt-0 5xl:mt-[37px] lg:mt-[32px] mt-[38px] after:w-[3px] lg:after:h-[17px] after:h-[25px] after:absolute after:left-[17px] rtl:after:left-unset rtl:after:right-[17px] after:-bottom-[7px] after:bg-border-light after:translate-y-full last:after:hidden">
                       <div class="flex items-center gap-2">
-                        <div class="flex items-center justify-center rounded-full p-2 group-hover:scale-105 scale-100 bg-success"><span class="sm:w-[18px] sm:h-[18px] w-[22px] h-[22px] flex items-center  rounded-full justify-center bg-white"><i class="w-[14px] h-[14px] stroke-success stroke-[4]" data-feather="check"></i></span></div>
-                        <div>
+                        <div class="flex items-center justify-center rounded-full p-2 group-hover:scale-105 scale-100 bg-success"><span class="sm:w-[18px] sm:h-[18px] w-[22px] h-[22px] flex items-center  rounded-full justify-center bg-white"><i class="w-[14px] h-[14px] stroke-success stroke-[4]" data-feather="check"> </i></span></div>
+                        <div> 
                           <h3 class="text-xs font-semibold text-title line-clamp-1">Route P204_salesfores created</h3>
                           <h4 class="font-semibold text-2xs text-content line-clamp-1">Andre Sluczka</h4>
                         </div>
@@ -1571,8 +1585,8 @@
                     </li>
                     <li class="flex gap-3 group items-center justify-between relative first:mt-0 5xl:mt-[37px] lg:mt-[32px] mt-[38px] after:w-[3px] lg:after:h-[17px] after:h-[25px] after:absolute after:left-[17px] rtl:after:left-unset rtl:after:right-[17px] after:-bottom-[7px] after:bg-border-light after:translate-y-full last:after:hidden">
                       <div class="flex items-center gap-2">
-                        <div class="flex items-center justify-center rounded-full p-2 group-hover:scale-105 scale-100 bg-warning"><span class="sm:w-[18px] sm:h-[18px] w-[22px] h-[22px] flex items-center  rounded-full justify-center bg-white"><i class="w-[14px] h-[14px] stroke-warning stroke-[4]" data-feather="alert-circle"></i></span></div>
-                        <div>
+                        <div class="flex items-center justify-center rounded-full p-2 group-hover:scale-105 scale-100 bg-warning"><span class="sm:w-[18px] sm:h-[18px] w-[22px] h-[22px] flex items-center  rounded-full justify-center bg-white"><i class="w-[14px] h-[14px] stroke-warning stroke-[4]" data-feather="alert-circle"> </i></span></div>
+                        <div> 
                           <h3 class="text-xs font-semibold text-title line-clamp-1">R304_salesforece undeployed</h3>
                           <h4 class="font-semibold text-2xs text-content line-clamp-1">Fabian Beliza</h4>
                         </div>
@@ -1580,8 +1594,8 @@
                     </li>
                     <li class="flex gap-3 group items-center justify-between relative first:mt-0 5xl:mt-[37px] lg:mt-[32px] mt-[38px] after:w-[3px] lg:after:h-[17px] after:h-[25px] after:absolute after:left-[17px] rtl:after:left-unset rtl:after:right-[17px] after:-bottom-[7px] after:bg-border-light after:translate-y-full last:after:hidden">
                       <div class="flex items-center gap-2">
-                        <div class="flex items-center justify-center rounded-full p-2 group-hover:scale-105 scale-100 bg-danger"><span class="sm:w-[18px] sm:h-[18px] w-[22px] h-[22px] flex items-center  rounded-full justify-center bg-white"><i class="w-[14px] h-[14px] stroke-danger stroke-[4]" data-feather="x"></i></span></div>
-                        <div>
+                        <div class="flex items-center justify-center rounded-full p-2 group-hover:scale-105 scale-100 bg-danger"><span class="sm:w-[18px] sm:h-[18px] w-[22px] h-[22px] flex items-center  rounded-full justify-center bg-white"><i class="w-[14px] h-[14px] stroke-danger stroke-[4]" data-feather="x"> </i></span></div>
+                        <div> 
                           <h3 class="text-xs font-semibold text-title line-clamp-1">R304_salesforece failed</h3>
                           <h4 class="font-semibold text-2xs text-content line-clamp-1">Michael Ganatra</h4>
                         </div>
@@ -1589,8 +1603,8 @@
                     </li>
                     <li class="flex gap-3 group items-center justify-between relative first:mt-0 5xl:mt-[37px] lg:mt-[32px] mt-[38px] after:w-[3px] lg:after:h-[17px] after:h-[25px] after:absolute after:left-[17px] rtl:after:left-unset rtl:after:right-[17px] after:-bottom-[7px] after:bg-border-light after:translate-y-full last:after:hidden">
                       <div class="flex items-center gap-2">
-                        <div class="flex items-center justify-center rounded-full p-2 group-hover:scale-105 scale-100 bg-success"><span class="sm:w-[18px] sm:h-[18px] w-[22px] h-[22px] flex items-center  rounded-full justify-center bg-white"><i class="w-[14px] h-[14px] stroke-success stroke-[4]" data-feather="check"></i></span></div>
-                        <div>
+                        <div class="flex items-center justify-center rounded-full p-2 group-hover:scale-105 scale-100 bg-success"><span class="sm:w-[18px] sm:h-[18px] w-[22px] h-[22px] flex items-center  rounded-full justify-center bg-white"><i class="w-[14px] h-[14px] stroke-success stroke-[4]" data-feather="check"> </i></span></div>
+                        <div> 
                           <h3 class="text-xs font-semibold text-title line-clamp-1">New environment DEV created</h3>
                           <h4 class="font-semibold text-2xs text-content line-clamp-1">Wade Warren</h4>
                         </div>
@@ -1598,8 +1612,8 @@
                     </li>
                     <li class="flex gap-3 group items-center justify-between relative first:mt-0 5xl:mt-[37px] lg:mt-[32px] mt-[38px] after:w-[3px] lg:after:h-[17px] after:h-[25px] after:absolute after:left-[17px] rtl:after:left-unset rtl:after:right-[17px] after:-bottom-[7px] after:bg-border-light after:translate-y-full last:after:hidden">
                       <div class="flex items-center gap-2">
-                        <div class="flex items-center justify-center rounded-full p-2 group-hover:scale-105 scale-100 bg-success"><span class="sm:w-[18px] sm:h-[18px] w-[22px] h-[22px] flex items-center  rounded-full justify-center bg-white"><i class="w-[14px] h-[14px] stroke-success stroke-[4]" data-feather="check"></i></span></div>
-                        <div>
+                        <div class="flex items-center justify-center rounded-full p-2 group-hover:scale-105 scale-100 bg-success"><span class="sm:w-[18px] sm:h-[18px] w-[22px] h-[22px] flex items-center  rounded-full justify-center bg-white"><i class="w-[14px] h-[14px] stroke-success stroke-[4]" data-feather="check"> </i></span></div>
+                        <div> 
                           <h3 class="text-xs font-semibold text-title line-clamp-1">Project salesforce created</h3>
                           <h4 class="font-semibold text-2xs text-content line-clamp-1">Bessie Cooper</h4>
                         </div>
