--- a/assets/pug/data/notification.pug
+++ b/assets/pug/data/notification.pug
@@ -2,64 +2,64 @@
 //-  Notification 
 //- =====================
 -
-   var NOTIFICATION= 
-      [
-         {
-            name:"Dmitriy Groshev",
-            avatar:"2.jpg",
-            subTitle:"Hi, i am josephin. How are you... ",
-            status:"success",
-            time:"17:12",
-            notif:3, 
-         },
-         {
-            name:"Sufiya Elija",
-            avatar:"3.jpg",
-            subTitle:"I need job, Please help me.",
-            status:"danger",
-            time:"Fri",
-            notif:32, 
-         },
-         {
-            name:"Janis Evans",
-            avatar:"5.jpg",
-            subTitle:"Good Morning!",
-            status:"success",
-            time:"8:22",
-            notif:12, 
-         },
+  var NOTIFICATION= 
+    [
+      {
+        name:"Dmitriy Groshev",
+        avatar:"2.jpg",
+        subTitle:"Hi, i am josephin. How are you... ",
+        status:"online",
+        time:"17:12",
+        notif:3, 
+      },
+      {
+        name:"Sufiya Elija",
+        avatar:"3.jpg",
+        subTitle:"I need job, Please help me.",
+        status:"offline",
+        time:"Fri",
+        notif:32, 
+      },
+      {
+        name:"Janis Evans",
+        avatar:"5.jpg",
+        subTitle:"Good Morning!",
+        status:"online",
+        time:"8:22",
+        notif:12, 
+      },
 
-         {
-            name:"Mukrani Pabelo",
-            avatar:"4.jpg",
-            subTitle:"Hi, i am josephin. How are you...",
-            status:"success",
-            time:"03:14",
-            notif:10, 
-         },
-         {
-            name:"Josephin Water",
-            avatar:"2.jpg",
-            subTitle:"You’ve got some kind of a stom...",
-            status:"danger",
-            time:"Thu",
-            notif:2, 
-         },
-         {
-            name:"Janis Evans",
-            avatar:"5.jpg",
-            subTitle:"Good Morning!",
-            status:"success",
-            time:"8:22",
-            notif:12, 
-         },
-         {
-            name:"Sufiya Elija",
-            avatar:"3.jpg",
-            subTitle:"I need job, Please help me.",
-            status:"danger",
-            time:"Fri",
-            notif:32, 
-         },
+      {
+        name:"Mukrani Pabelo",
+        avatar:"4.jpg",
+        subTitle:"Hi, i am josephin. How are you...",
+        status:"online",
+        time:"03:14",
+        notif:10, 
+      },
+      {
+        name:"Josephin Water",
+        avatar:"2.jpg",
+        subTitle:"You’ve got some kind of a stom...",
+        status:"offline",
+        time:"Thu",
+        notif:2, 
+      },
+      {
+        name:"Janis Evans",
+        avatar:"5.jpg",
+        subTitle:"Good Morning!",
+        status:"online",
+        time:"8:22",
+        notif:12, 
+      },
+      {
+        name:"Sufiya Elija",
+        avatar:"3.jpg",
+        subTitle:"I need job, Please help me.",
+        status:"offline",
+        time:"Fri",
+        notif:32, 
+      },
 
-      ]
+    ]
