--- a/assets/pug/pages/template/countdown.pug
+++ b/assets/pug/pages/template/countdown.pug
@@ -376,30 +376,30 @@ html(lang='en')
                           ul.timer.countdown-5.flex.flex-wrap.gap-2.justify-center.items-center(class="sm:gap-1")
                             li
                               span.timer-label Days
-                              span.days.time-value(class="text-title")
+                              span.days.time-value(class="text-title dark:text-black")
                             li
                               span.timer-label Hours
-                              span.hours.time-value(class="text-title")
+                              span.hours.time-value(class="text-title dark:text-black")
                             li
                               span.timer-label Min
-                              span.minutes.time-value(class="text-title")
+                              span.minutes.time-value(class="text-title dark:text-black")
                             li
                               span.timer-label Sec
-                              span.seconds.time-value(class="text-title")
+                              span.seconds.time-value(class="text-title dark:text-black")
                         div.bg-gray-light.p-4(class="sm:p-2 dark:bg-sidebar-dark2")
                           ul.timer.countdown-6.flex.flex-wrap.gap-2.justify-center.items-center(class="sm:!gap-1")
-                            li(class="dark:bg-sidebar-dark")
-                              span.days.time-value 
+                            li
+                              span(class="dark:text-black").days.time-value 
                               span.timer-label Days
-                            li(class="dark:bg-sidebar-dark")
-                              span.hours.time-value 
+                            li
+                              span(class="dark:text-black").hours.time-value 
                               span.timer-label Hours
-                            li(class="dark:bg-sidebar-dark")
-                              span.minutes.time-value 
+                            li
+                              span(class="dark:text-black").minutes.time-value 
                               span.timer-label Min
-                            li(class="dark:bg-sidebar-dark")
-                              span.seconds.time-value 
-                              span.timer-label Sec
+                            li
+                              span(class="dark:text-black").seconds.time-value 
+                              span.timer-label Sec 
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")   
                         i(data-feather="clipboard")
