--- a/html/template/video-app.html
+++ b/html/template/video-app.html
@@ -82,7 +82,7 @@
                           <ul class="mt-4 flex flex-col max-h-[232px] overflow-auto custom-scroll"> 
                             <li class="flex items-center gap-3 px-2 py-3 transition-all duration-300 border-b last:border-b-0 dark:hover:bg-sidebar-dark2 border-border-light hover:bg-gray-light rounded-5"><a class="flex items-center gap-[12px]" href="./chat.html">
                                 <div class="indicator"><span class="chat-status status-online"></span>
-                                  <div class="avatar"> 
+                                  <div class="avatar">
                                     <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/2.jpg" alt="Dmitriy Groshev"></div>
                                   </div>
                                 </div>
@@ -95,7 +95,7 @@
                             </li>
                             <li class="flex items-center gap-3 px-2 py-3 transition-all duration-300 border-b last:border-b-0 dark:hover:bg-sidebar-dark2 border-border-light hover:bg-gray-light rounded-5"><a class="flex items-center gap-[12px]" href="./chat.html">
                                 <div class="indicator"><span class="chat-status status-offline"></span>
-                                  <div class="avatar"> 
+                                  <div class="avatar">
                                     <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/3.jpg" alt="Sufiya Elija"></div>
                                   </div>
                                 </div>
@@ -108,7 +108,7 @@
                             </li>
                             <li class="flex items-center gap-3 px-2 py-3 transition-all duration-300 border-b last:border-b-0 dark:hover:bg-sidebar-dark2 border-border-light hover:bg-gray-light rounded-5"><a class="flex items-center gap-[12px]" href="./chat.html">
                                 <div class="indicator"><span class="chat-status status-online"></span>
-                                  <div class="avatar"> 
+                                  <div class="avatar">
                                     <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/5.jpg" alt="Janis Evans"></div>
                                   </div>
                                 </div>
@@ -121,7 +121,7 @@
                             </li>
                             <li class="flex items-center gap-3 px-2 py-3 transition-all duration-300 border-b last:border-b-0 dark:hover:bg-sidebar-dark2 border-border-light hover:bg-gray-light rounded-5"><a class="flex items-center gap-[12px]" href="./chat.html">
                                 <div class="indicator"><span class="chat-status status-online"></span>
-                                  <div class="avatar"> 
+                                  <div class="avatar">
                                     <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/4.jpg" alt="Mukrani Pabelo"></div>
                                   </div>
                                 </div>
@@ -134,7 +134,7 @@
                             </li>
                             <li class="flex items-center gap-3 px-2 py-3 transition-all duration-300 border-b last:border-b-0 dark:hover:bg-sidebar-dark2 border-border-light hover:bg-gray-light rounded-5"><a class="flex items-center gap-[12px]" href="./chat.html">
                                 <div class="indicator"><span class="chat-status status-offline"></span>
-                                  <div class="avatar"> 
+                                  <div class="avatar">
                                     <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/2.jpg" alt="Josephin Water"></div>
                                   </div>
                                 </div>
@@ -147,7 +147,7 @@
                             </li>
                             <li class="flex items-center gap-3 px-2 py-3 transition-all duration-300 border-b last:border-b-0 dark:hover:bg-sidebar-dark2 border-border-light hover:bg-gray-light rounded-5"><a class="flex items-center gap-[12px]" href="./chat.html">
                                 <div class="indicator"><span class="chat-status status-online"></span>
-                                  <div class="avatar"> 
+                                  <div class="avatar">
                                     <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/5.jpg" alt="Janis Evans"></div>
                                   </div>
                                 </div>
@@ -160,7 +160,7 @@
                             </li>
                             <li class="flex items-center gap-3 px-2 py-3 transition-all duration-300 border-b last:border-b-0 dark:hover:bg-sidebar-dark2 border-border-light hover:bg-gray-light rounded-5"><a class="flex items-center gap-[12px]" href="./chat.html">
                                 <div class="indicator"><span class="chat-status status-offline"></span>
-                                  <div class="avatar"> 
+                                  <div class="avatar">
                                     <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"><img src="../../assets/images/avatar/3.jpg" alt="Sufiya Elija"></div>
                                   </div>
                                 </div>
@@ -759,7 +759,7 @@
         <!-- Sidebar Start -->
         <div class="page-sidebar sidebar-dark unique-sidebar">
           <aside class="sidebar"> 
-            <div class="logo-wrapper"><a href="index.html"> <img class="w-full" src="../../assets/images/logo/logo.png" alt="logo"></a>
+            <div class="logo-wrapper"><a href="index.html"> <img class="w-full full-sidebar" src="../../assets/images/logo/logo.png" alt="logo"><img class="w-full icon-sidebar" src="../../assets/images/logo/logo-sort-1.png" alt="logo"></a>
               <button class="sidebar-btn">
                 <svg class="w-6 h-6"> 
                   <use href="../../assets/svg/sprite.svg#Category"> </use>
